# marmot

./: .dockerignore  .gitignore  .goreleaser.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  Dockerfile.goreleaser-cross  Dockerfile.goreleaser.distroless  LICENSE  Makefile  README.md  SKILL.md  Tiltfile  go.mod  go.sum  install.sh  openapiconfig.yaml  run.yaml  server.json
.claude/agents/: code-reviewer.md  go-review.md  psql-review.md  svelte-tailwind-review.md
.github/: .golangci.yaml  FUNDING.yml  chart-testing.yaml  lint.sh  test.sh
.github/workflows/: docs.yaml  e2e.yaml  release-chart.yaml  release-plugin.yaml  release-sdk-py.yaml  release-sdk-ts.yaml  release.yaml  test-chart.yaml  test-plugins.yaml  test-sdk-go.yaml  test-sdk-py.yaml  test-sdk-ts.yaml  test.yaml
chart/marmot/: Chart.yaml  values.yaml
charts/marmot/: Chart.yaml  README.md  values-example.yaml  values.schema.json  values.yaml
client/: go.mod
client/client/: marmot_client.go
client/models/: asset_asset.go  asset_asset_source.go  asset_environment.go  asset_metadata_field_suggestion.go  asset_metadata_value_suggestion.go  assetdocs_documentation.go  assetrule_asset_rule.go  assetrule_external_link.go  assetrule_list_result.go  assetrule_rule_preview.go  auth_token_exchange_response.go  dataproduct_image_purpose.go  dataproduct_product_image_meta.go  enrichment_rule_type.go  github_com_marmotdata_marmot_internal_api_v1_common_error_response.go  github_com_marmotdata_marmot_internal_core_search_response.go  glossary_glossary_term.go  glossary_list_result.go  lineage_dataset.go  lineage_job.go  lineage_lineage_edge.go  lineage_lineage_node.go  lineage_lineage_response.go  lineage_run.go  lineage_run_event.go  plugin_raw_plugin_config.go  plugin_run.go  plugin_run_status.go  runs_job_run.go  runs_schedule.go  search_facets.go  search_result.go  search_result_type.go  team_owner.go  team_s_s_o_team_mapping.go  team_team.go  team_team_member_with_user.go  user_create_user_input.go  user_role.go  user_update_user_input.go  (+50 more)
cmd/: main.go
docs/: docs.go  swagger.json  swagger.yaml
examples/quickstart/: create-assets.sh  docker-compose.yaml
internal/background/: singleton.go
internal/client/: admin.go  assets.go  client.go  glossary.go  lineage.go  metrics.go  runs.go  search.go  teams.go  users.go
internal/cmd/: admin.go  apiclient.go  apikeys.go  assets.go  callback_page.go  config.go  context.go  context_test.go  credentials.go  credentials_test.go  generate_key.go  glossary.go  helpers.go  ingest.go  lineage.go  login.go  login_test.go  metrics.go  operator.go  products.go  root.go  run.go  runs_cmd.go  search.go  serviceaccounts.go  tags.go  teams.go  users.go  version.go
internal/config/: config.go  tls.go  tls_test.go
internal/crypto/: encryption.go
internal/docgen/: docgen.go
internal/mcp/: formatting.go  server.go  tools.go
internal/metrics/: collector.go  recorder.go  service.go  store.go
internal/mrn/: mrn.go
internal/oauth2/: authorise_session.go  provider.go  session.go  store.go  store_test.go
internal/operator/: cmd.go
internal/plugin/: aws.go  config.go  config_crypto.go  config_test.go  external.go  filesource.go  filesource_test.go  filter.go  loadstate.go  loadstate_test.go  metadata.go  plugin.go  registry.go  registry_test.go  tags.go  validation.go
internal/query/: builder.go  builder_test.go  integration_test.go  parser.go  query.go  tokeniser.go  util.go
internal/staticfiles/: handler.go  routes.go  routes_prod.go
internal/sync/: integration_test.go  merge.go  summary.go  syncer.go
internal/telemetry/: telemetry.go
internal/websocket/: build_dev.go  build_prod.go  event.go  handler.go  hub.go  job_run_broadcaster.go  search_reindex_broadcaster.go
internal/worker/: batcher.go  pool.go
pkg/config/: config.go
pkg/marmot/: marmot.go
plugins/airflow/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/asyncapi/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/azureblob/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/bigquery/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/clickhouse/: .gitignore  .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/confluent/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/dbt/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/deltalake/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/duckdb/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/dynamodb/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/eks/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go
plugins/elasticsearch/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  plugin.yaml
plugins/gcs/: .goreleaser.yaml  Makefile  (+4 more)
sdk/python/: .gitignore  codegen.yaml  pyproject.toml
sdk/python/examples/: langchain_agent.py  langchain_agent_ollama.py  quickstart.py
sdk/python/examples/claude_agent_marmot/: main.py
sdk/python/src/marmot/: __init__.py  _adapter.py  _config.py  _http.py  client.py  errors.py
sdk/python/src/marmot/auth/: __init__.py  exchange.py
sdk/python/src/marmot/auth/workload/: __init__.py  gcp.py  github.py  kubernetes.py
sdk/python/src/marmot/integrations/: __init__.py  _shared.py
sdk/python/src/marmot/integrations/claude_agent/: __init__.py  _tracker.py  _transcript.py
sdk/python/src/marmot/integrations/langchain/: __init__.py  _callback.py  _tools.py
sdk/python/src/marmot/resources/: __init__.py  admin.py  agent_runs.py  api_keys.py  assets.py  glossary.py  lineage.py  metrics.py  owners.py  products.py  runs.py  search.py  tags.py  teams.py  users.py
sdk/python/tests/: test_auth_chain.py  test_claude_agent_integration.py  test_config.py  test_langchain_integration.py  test_resources.py  test_workload.py
(+1564 files in other folders)
